[gd_scene load_steps=6 format=3 uid="uid://cb4fxg1qk7i5g"]

[ext_resource type="PackedScene" uid="uid://btuolqcayirgb" path="res://Game/Units/general_unit.tscn" id="1_i1m5b"]
[ext_resource type="Script" path="res://Game/Units/Player/PlayerController.gd" id="2_4ayog"]
[ext_resource type="Texture2D" uid="uid://h7j3b4wr3lg7" path="res://Art/Characters/green_hand.png" id="3_2b56o"]
[ext_resource type="Script" path="res://Game/Components/InputAction.gd" id="3_qq5cb"]
[ext_resource type="Script" path="res://Game/Units/Player/GoopController.gd" id="5_ibuwr"]

[node name="Player" node_paths=PackedStringArray("goop", "leftInput", "rightInput", "upInput", "downInput", "mainActionInput", "dropInput", "dashInput", "consumeInput", "stunTimer") instance=ExtResource("1_i1m5b")]
position = Vector2(-3, 12)
scale = Vector2(1.00423, 1.00425)
collision_layer = 16
collision_mask = 49
script = ExtResource("2_4ayog")
goop = NodePath("GoopController")
leftInput = NodePath("Inputs/Move Left")
rightInput = NodePath("Inputs/Move Right")
upInput = NodePath("Inputs/Move Up")
downInput = NodePath("Inputs/Move Down")
mainActionInput = NodePath("Inputs/Main Action")
dropInput = NodePath("Inputs/Drop Action")
dashInput = NodePath("Inputs/Dash Action")
consumeInput = NodePath("Inputs/Consume Action")
_dashSpeed = 3000.0
_dashCooldown = 0.5
_dash_stretch = 3.0
_dash_cost = 5
_consume_threshold = 0.15
stunTimer = NodePath("Stun")
bodyVisual = ExtResource("3_2b56o")
bodyScale = 2.0

[node name="Hurtbox" parent="." index="2"]
collision_layer = 18
collision_mask = 34
maxHealth = 500.0

[node name="Inputs" type="Node" parent="." index="3"]

[node name="Move Down" type="Node" parent="Inputs" index="0"]
script = ExtResource("3_qq5cb")
action_name = "move_down"

[node name="Move Up" type="Node" parent="Inputs" index="1"]
script = ExtResource("3_qq5cb")
action_name = "move_up"

[node name="Move Left" type="Node" parent="Inputs" index="2"]
script = ExtResource("3_qq5cb")
action_name = "move_left"

[node name="Move Right" type="Node" parent="Inputs" index="3"]
script = ExtResource("3_qq5cb")
action_name = "move_right"

[node name="Main Action" type="Node" parent="Inputs" index="4"]
script = ExtResource("3_qq5cb")
action_name = "main_action"

[node name="Drop Action" type="Node" parent="Inputs" index="5"]
script = ExtResource("3_qq5cb")
action_name = "drop_action"

[node name="Dash Action" type="Node" parent="Inputs" index="6"]
script = ExtResource("3_qq5cb")
action_name = "dash_action"

[node name="Consume Action" type="Node" parent="Inputs" index="7"]
script = ExtResource("3_qq5cb")
action_name = "consume_action"

[node name="GoopController" type="Node" parent="." index="5" node_paths=PackedStringArray("health")]
script = ExtResource("5_ibuwr")
health = NodePath("../Hurtbox")

[connection signal="on_hit" from="Hurtbox" to="." method="_on_health_hit"]
[connection signal="OnInputPress" from="Inputs/Drop Action" to="." method="_on_drop_action_on_input_press"]
[connection signal="OnInputPress" from="Inputs/Dash Action" to="." method="_on_dash_action_on_input_press"]
[connection signal="OnInputPress" from="Inputs/Consume Action" to="." method="_on_dash_action_on_input_press"]
